--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 	compile 'org.apache.commons:commons-math3:3.6.1'
 	implementation 'com.lemmingapex.trilateration:trilateration:1.0.2'
+	compile("org.springframework.boot:spring-boot-starter-security")
 }
 
 test {
